<?xml version="1.0"?>
<package>
  <name>summit_control</name>
  <version>0.0.0</version>
  <description>The summit_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="infol@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/summit_xl_control</url> -->
  
 <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>ros_control</build_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
